# VortiCrypt

./: .gitignore  README.md  pyproject.toml  requirements.txt  structure.txt
.github/workflows/: python-app.yml
tests/: test_cipher.py
vorticrypt/: cli.py
vorticrypt/core/: cipher.py  kdf.py  padding.py
vorticrypt/gui/: app.py  canvas_3d.py
vorticrypt/utils/: math_helpers.py
